--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -4,7 +4,7 @@
     <ul class="menu-bar">
         <li> <a href=" {{path('app_articles_index')}} ">Articles</a> </li>
         
-        <li> <a href=" {{path('app_card_index')}} ">Cards</a></li>
+        <li> <a href=" {{path('app_cart_index')}} ">Cards</a></li>
         <li><a href=" {{path('app_user_index')}} ">Users</a></li>
     </ul>
 </nav>
